--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url('circles-light.png');
+}
+
 h1,
 h2 {
     text-align: center;
@@ -11,4 +15,13 @@ h2 {
 .wrapper {
     width: 300px;
     margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+    .wrapper {
+        width: 100%;
+    }
+    #password {
+        width: 100%;
+    }
 }
