--- a/style.css
+++ b/style.css
@@ -5,16 +5,33 @@ body {
 h1,
 h2 {
     text-align: center;
+    color:lightgray;
 }
 
 #password {
+    display: block;
     width: 300px;
     height: 200px;
+    margin: 0 auto;
 }
 
 .wrapper {
-    width: 300px;
+    width: 400px;
+    padding-top: 10px;
+    padding-bottom: 20px;
     margin: 0 auto;
+    background-color: gray;
+    border: 4px solid teal;
+    border-radius: 5px;
+}
+
+#button-block {
+    display: block;
+    text-align: center;
+}
+
+button {
+    color:teal;
 }
 
 @media (max-width: 768px) {
@@ -22,6 +39,6 @@ h2 {
         width: 100%;
     }
     #password {
-        width: 100%;
+        width: 75%;
     }
 }
