--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-    background-image: url('shapeline.jpg');
+    background-image: url('./images/shapeline.jpg');
 }
 
 h1 {
     text-align: center;
     color:lightgray;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 #password {
@@ -22,7 +22,7 @@ h1 {
     margin: 0 auto;
     background-color: gray;
     border: 4px solid teal;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 #button-block {
